# ids-cnn-lstm-gnn

./: .gitignore  AI_INSTRUCTIONS.md  CMakeLists.txt  README.md  architecture_evolution.md  cross_validation_report.md  dashboard_api.py  dashboard_api_benchmark.py  dashboard_api_legacy.py  dashboard_api_v2.py  dashboard_v2_enterprise_video.webm  export_torchscript.py  fusion_changelog.md  generate_benchmark_chart.py  generate_daemon_chart.py  generate_ui_chart.py  implementation_plan.md  inference.py  main.cpp  model.py  preprocessor.py  project_overview.md  project_state.md  research_history_log.md  run_spectre.ps1  setup_ebpf_env.sh  spectre_history.db  spectre_history_v2.db  start_spectre.sh  start_spectre_v2.sh  stress_test.py  test_performance_fusion.cpp  test_ws.py  test_ws_win.py  traffic_simulator.py  train.py  validate_parity.py  wsl_deployment_guide.md
dashboard_go/: go.mod  main.go
dashboard_v2/: index.html  package-lock.json  package.json
dashboard_v2/src/: App.jsx  index.css
data/: GeneratedLabelledFlows.md5
data/logs/: spectre_alerts.jsonl
data/processed/: top20_features.json
data/raw/: KDDTrain_compat.csv  dummy_traffic.csv
data/raw/benchmarks/: CIC-IDS2017.csv
deploy/: install_services.sh
deploy/systemd/: spectre-api.service  spectre-fusion.service  spectre-web.service
ebpf/: common.h  loader.cpp  loader_fusion.cpp  loader_fusion_legacy.cpp  loader_fusion_v2.cpp  spectre_xdp.c
loader_fusion_rs/: Cargo.toml
loader_fusion_rs/src/: main.rs
scratch/: capture_mermaid.py  capture_mermaid_subgraphs.py  capture_screenshot.py  continuous_flow_generator.py  full_git_history.txt  list_user_steps.py  loopback_syn_flood.py  matches.txt  mermaid_preview.html  mermaid_preview_subgraphs.html  raw_syn_flood.py  read_logs.py  read_websocket.py  real_syn_flood.py  simulate_dashboard_traffic.py  test_ui.py  test_ws.py  trigger_attack.py  trigger_ddos.sh  udp_flood.py
static/: index.html
static/css/: style.css
static/js/: app.js
static_legacy/: index.html
